src/main/java/com/example/Structural/Bridge/good/Color.java
package com.example.Structural.Bridge.good;

public interface Color {
   public String redColor();
   public String greenColor();
    public String whiteColor();
    public String blackColor();
    public String yellowColor();
}
