src/main/java/com/example/Structural/Bridge/bad/Shape.java
package com.example.Structural.Bridge.bad;

public interface Shape {

    String getShape();
}
